Fixed blog post paper graphics on smaller screens

--- a/client/src/components/BlogPostGraphics/BlogPostGraphics.css
+++ b/client/src/components/BlogPostGraphics/BlogPostGraphics.css
@@ -1,28 +1,36 @@
 .blog-graphics {
     display: flex;
+    position: relative;
     justify-content: center;
     align-items: center;
     width: 100%;
     height: 100%;
-    animation: bob 2s ease-in-out infinite;
+    animation: spin-intro .5s ease-in-out, bob 2s ease-in-out infinite;
+}
+
+
+@keyframes spin-intro {
+    0% {
+        transform: rotateY(120deg);
+    }
+    100% { 
+        transform: rotateY(0deg);
+    }
 }
 
 @keyframes bob {
     0%, 100% {
-        transform: translateY(-5px);
+        margin-top: -5px;
     }
     50% { 
-        transform: translateY(5px);
+        margin-top: 5px;
     }
 }
 
 .blog-graphics__paper, .paper.-two {
-    width: 80%;
-    height: 100%; 
-    min-width: 80px;
-    min-height: 130px;
-    max-width: 200px;
-    max-height: 300px;
+    width: 80%; height: 100%; 
+    min-width: 80px; min-height: 130px;
+    max-width: 200px; max-height: 300px;
     border: .1px solid black;
     border-radius: 1vw;
     transform: rotateX(-40deg) rotateZ(-20deg);
@@ -39,11 +47,12 @@
 
 .blog-graphics__paper:before {
     --paper-background-color: rgb(235, 235, 235);
+    --paper-flip-size: max(min(5vw, 100px), 25px);
     content: '';
     position: absolute;
     top: -1px; right: -1px;
-    border-top: 80px solid var(--paper-background-color);
-    border-left: 80px solid #E9E9E9;
+    border-top: var(--paper-flip-size)  solid var(--paper-background-color);
+    border-left: var(--paper-flip-size) solid #F7F8F3;
     width: 0;
     border-radius: 0 0 0 12px;
     box-shadow: -2px 2px 1px rgba(109, 71, 47, 0.2);
@@ -68,7 +77,5 @@
     position: absolute;
     background: #E9E9E9;
     transform: rotateX(-40deg) rotateZ(-20deg) translate(max(-1vw, -10px), min(1.5vw, 12px)); 
-    background-image: radial-gradient(#333 1px, transparent 0);
-    background-size: 4px 4px;
-    background-position: -19px -19px;
+    background-image: radial-gradient(#333 1px, transparent 0); background-size: 4px 4px; background-position: -19px -19px;
 }
